# investment-analysis

./: .gitignore  LICENSE  README.md  portfolio_optimization.ipynb  portfolio_optomisation.ipynb  pyproject.toml  requirements.txt  stock_data.ipynb
notebooks/: portfolio_optimisation.ipynb
