[tool.poetry]
name = "investment analysis"
version = "0.1.0"
description = "My investment analysis scripts"
authors = ["Mikhail Polyakov"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ipykernel = "^6.0.3"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
pandas-datareader = "^0.10.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
